# click_example

./: pyproject.toml
src/voorbeeld/: __init__.py  main.py
